# semtag

./: .gitignore  README.md  __init__.py  easy-tagger.py  git_tags.py  pyproject.toml  sem_ver.py  semtag.py  semtagger.py  semver.py  setup.py
.github/workflows/: publish.yml  release.yml
NOT_YET.github/workflows/: publish.yml
tools/: pre-commit
